--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <div class="copyright-wthree">
 	<div class="container">
-		<p>&copy; 2017 Portfolio . All Rights Reserved | Modified by <a href=""> Touqeer Ahmad </a></p>
+		<p>&copy; 2017 Portfolio . All Rights Reserved | <a target="_blank" href="https://www.linkedin.com/in/touqeer-ahmad/"> Touqeer Ahmad </a></p>
 	</div>
 </div>
 <!-- //Footer -->
