--- a/app/views/portfolios/_about.html.erb
+++ b/app/views/portfolios/_about.html.erb
@@ -19,19 +19,19 @@
 				<h6>Web Development</h6>
 			</div>
 			<div class="services-grids">
+				<a class="fa fa-mobile" aria-hidden="true"></a>
+				<p class="para-agileits-w3layouts">Get fast and responsive sites.</p>
+				<h6>Web Responsiveness</h6>
+			</div>
+			<div class="services-grids">
 				<a class="fa fa-globe" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP protocol.</p>
+				<p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP by keeping the perspective of stability, consistency, flexibility, adobtability and security.</p>
 				<h6>API Development</h6>
 			</div>
 			<div class="services-grids">
 				<a class="fa fa-desktop" aria-hidden="true"></a>
 				<p class="para-agileits-w3layouts">Integration of Third parties like Google Map, Mobile Push Notifications, Amazon, S3 Storage, Email and many more</p>
 				<h6>Web Services</h6>
-			</div>
-			<div class="services-grids">
-				<a class="fa fa-mobile" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Get fast and responsive sites.</p>
-				<h6>Web Responsiveness</h6>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -40,8 +40,9 @@
 			<div class="about-border-w3ls">
 			</div>
 			<div class="person-info-agileits-w3layouts">
-				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon EC2, EB CLI, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc<br>
-				I have always provided the product in-time with best quality and still hunting to learn more and to improve my skills.</p>
+				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am technology enthusiast. I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon EC2, EB CLI, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc</p>
+				<p>I am involved in most parts of the software life cycle i.e architecture designing, schema designing, and coding.</p>
+				<p>I have always provided the product in-time with best quality and still hunting to learn more and to improve my skills.</p>
 				<ul>
 					<li><span>Name</span>: Touqeer Ahmad</li>
 					<li><span>Age</span>: 24 Years</li>
