--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -29,7 +29,7 @@
 		<div class="container">
 			<div class="col-md-6 contact-form agile_inner_grids">
 				<h5 class="title-w3">Say Hello</h5>
-				<% form_tag("portfolios_contact_me_path", method: "post") do %>
+				<%= form_tag("portfolios_contact_me_path", method: "post") do %>
 					<div class="fields-grid">
 						<div class="styled-input">
 							<input type="text" name="Full Name" placeholder="Name" required="">
