--- a/app/assets/stylesheets/portfolio.css
+++ b/app/assets/stylesheets/portfolio.css
@@ -8,23 +8,40 @@
 
 .grid-wrap {
 	margin: 10px auto 0;
-	width: 75%;
-    display: -webkit-box;
+	/*width: 75%;*/
+    /*display: -webkit-box;*/
 	padding: 0;
 	-webkit-perspective: 1500px;
 	perspective: 1500px;
 }
 
 .grid {
-	width: 50%;
-    height: 800px;
-    overflow-y: auto;
+    display: flow-root;
+    margin: 0 10%;
 	position: relative;
 	-webkit-transition: all 0.5s cubic-bezier(0,0,0.25,1);
 	transition: all 0.5s cubic-bezier(0,0,0.25,1);
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 	text-align:center;
+}
+.grid > .col-xs-12{
+	display: -webkit-inline-box;
+    overflow-x: auto;
+    margin-bottom: 20px;
+    padding: 0;
+}
+.grid > .col-xs-12::-webkit-scrollbar-track{
+	background: -webkit-linear-gradient(red, orange);
+}
+
+.grid > .col-xs-12::-webkit-scrollbar {
+	height: 5px;
+	background-color: #f5f5f5;
+}
+
+.grid > .col-xs-12::-webkit-scrollbar-thumb {
+	background-color: #000;
 }
 
 .view-full .grid {
@@ -40,7 +57,11 @@
 
 .grid figure {
 	margin: 20px;
-	display: inline-block;
+	display: flex;
+    justify-content: center;
+    height: 400px; /* or other desired height */
+    overflow: hidden;
+	/*display: inline-block;*/
 	cursor: pointer;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -95,7 +116,7 @@
 
 .grid figure img {
 	display: block;
-	width: 100%;
+	height: 100%;
 }
 
 .content,
@@ -148,15 +169,35 @@
 	height: 0;
 	opacity: 0;
 	background: #fff;
+	padding-top: 10px;
 }
-
 .content > div.show {
 	height: auto;
 	opacity: 1;	
 	-webkit-transition: opacity 0.6s;
 	transition: opacity 0.6s;
 }
-
+.carousel-inner{
+	display: block;
+    text-align: center;
+}
+.carousel-inner>.item{
+	height: 400px;
+}
+.carousel-inner>.item.active{
+	display: inline-block;
+}
+.carousel-inner>.item>img {
+	height: 100%;
+}
+.carousel-control{
+	height: 400px;
+    display: table;
+}
+.carousel-control > span{
+    display: table-cell;
+    vertical-align: middle;
+}
 .icon:before {
 	font-family: 'Glyphicons Halflings';
 	speak: none;
@@ -172,16 +213,18 @@
 .close-content {
 	position: fixed;
 	z-index: 1000;
-	top: 0;
+	top: 10px;
 	right: 10px;
 	font-size: 1.6em;
 	color: #aaa;
 	cursor: pointer;
 	pointer-events: none;
-	padding: 1em;
 	opacity: 0;
 	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
+}
+.fa-arrow-left:before, .fa-arrow-right:before{
+	color: black;
 }
 
 .close-content:hover {
@@ -191,10 +234,6 @@
 .content > div.show ~ .close-content {
 	opacity: 1;
 	pointer-events: auto;
-}
-
-.close-content:before {
-	content:"\e088";
 }
 
 /* Dummy content */
@@ -243,7 +282,7 @@
 }
 .content-img {
 	height: 400px;
-	background-color: #ddd;
+	/*background-color: #ddd;*/
 	margin: 30px auto;
 }
 .content-text {
@@ -287,7 +326,10 @@
 	.grid figure,
 	.grid .placeholder {
 		width: 240px;
-		height: 212px;
+		height: 240px;
+	}
+	.grid{
+		margin: 0 20px;
 	}
 
 }
