--- a/app/views/portfolios/_skills.html.erb
+++ b/app/views/portfolios/_skills.html.erb
@@ -3,7 +3,7 @@
 	<div class="title-wthree">
 		<h5 class="title-w3" style="margin-bottom: 0;"><span>04</span>Skills</h5>
 		<div class="clearfix"></div>
-	</div>>
+	</div>
 	<div class="container">
 		<div class="skill-agileinfo">
 			<div class="skill-grids">
@@ -107,7 +107,7 @@
 </div>
 <!-- //awards and skills -->
 <!-- language -->
-<div class="language-skills">
+<div class="language-skills" style="display: none;">
 	<div class="container">
 		<div class="col-md-6 lang-left-w3-agile">
 			<div class="title-wthree">
