--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -19,12 +19,7 @@
 	$(function () {
 		$('.w3_agile_gallery_grid a').Chocolat();
 	});
-</script>
- --><script>
 	new grid3D( document.getElementById( 'grid3d' ) );
-</script>
-<!-- /js files for portfolio -->
-<script type="text/javascript">
 	jQuery(document).ready(function ($) {
 		$(".scroll").click(function (event) {
 			event.preventDefault();
@@ -33,26 +28,12 @@
 			}, 1000);
 		});
 	});
-</script>
-<!-- start-smoth-scrolling -->
-<!-- here stars scrolling icon -->
-<script type="text/javascript">
 	$(document).ready(function () {
-		/*
-			var defaults = {
-			containerID: 'toTop', // fading element id
-			containerHoverID: 'toTopHover', // fading element hover id
-			scrollSpeed: 1200,
-			easingType: 'linear' 
-			};
-		*/
-
 		$().UItoTop({
 			easingType: 'easeOutQuart'
 		});
-		
-
 	});
+	// start-smoth-scrolling 
 	$(window).on('scroll',function() {
 	    if (checkVisible($('#skills'))) {
 	        $('.skillbar').skillBars({
@@ -65,4 +46,3 @@
 	    }
 	});
 </script>
-<!-- //here ends scrolling icon -->
