--- a/app/assets/stylesheets/portfolio.css.erb
+++ b/app/assets/stylesheets/portfolio.css.erb
@@ -141,7 +141,7 @@
 .loading {
 	opacity: 0;
 	z-index: 1;
-	background: transparent url(loader.gif) no-repeat center center;
+	background: transparent url('<%= asset_path("loader.gif") %>') no-repeat center center;
 	-webkit-transform: scale(0.5);
 	transform: scale(0.5);
 	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
