--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -402,7 +402,7 @@ nav.shift ul li a:hover:after {
 /*-- //header --*/
 
 .banner {
-	background: url("banner.jpg")no-repeat 0px 0px;
+	background: url('<%= asset_path("banner.jpg")%>')no-repeat 0px 0px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1008,7 +1008,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .edu-img-agileits {
-	background: url(edu.jpg)no-repeat 0px 0px;
+	background: url('<%= asset_path("edu.jpg") %>')no-repeat 0px 0px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1018,7 +1018,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .exp-img-agileits {
-	background: url(exp.jpg)no-repeat 0px 0px;
+	background: url('<%= asset_path("exp.jpg") %>')no-repeat 0px 0px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1065,7 +1065,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .language-skills {
-	background: url(award.jpg)no-repeat 0px 0px;
+	background: url('<%= asset_path("award.jpg") %>')no-repeat 0px 0px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1225,7 +1225,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .contact-right-wthree {
-	background: url(award.jpg)no-repeat 0px 0px;
+	background: url('<%= asset_path("award.jpg") %>')no-repeat 0px 0px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -1357,7 +1357,7 @@ h3.subheading-agileits-w3layouts {
 	height: 64px;
 	border: none;
 	text-indent: 100%;
-	background: url("arr.png") no-repeat 0px 0px;
+	background: url('<%= asset_path("arr.png") %>') no-repeat 0px 0px;
 	background-size: 40px;
 }
 
@@ -1882,7 +1882,7 @@ h3.subheading-agileits-w3layouts {
 	}
 	.banner {
 		min-height: 460px;
-		background: url(banner.jpg)no-repeat -160px 0px;
+		background: url('<%= asset_path("banner.jpg") %>')no-repeat -160px 0px;
 		background-size: cover;
 	}
 	.ror-pic {
@@ -1977,7 +1977,7 @@ h3.subheading-agileits-w3layouts {
 	}
 	.banner {
 	    min-height: 400px;
-	    background: url(banner.jpg)no-repeat -150px 0px;
+	    background: url('<%= asset_path("banner.jpg") %>')no-repeat -150px 0px;
 	    background-size: cover;
 	}
 	.banner-text-w3-agileits {
@@ -2045,7 +2045,7 @@ h3.subheading-agileits-w3layouts {
 		right: 4%;
 		width: 32px;
 		height: 32px;
-		background: url(arr.png) no-repeat 0px 0px;
+		background: url('<%= asset_path("arr.png") %>') no-repeat 0px 0px;
 		background-size: 32px;
 	}
 }
