about me mobile view adjusted

--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -399,7 +399,7 @@ h2.agileits-title {
 .about-right h4 {
     font-size: 1.1em;
     color: #a5a5a5;
-    margin-top: 1em;
+    margin-top: 4px;
     letter-spacing: 2px;
 }
 .about-left img {
