--- a/app/views/portfolios/_about.html.erb
+++ b/app/views/portfolios/_about.html.erb
@@ -40,13 +40,12 @@
 			<div class="about-border-w3ls">
 			</div>
 			<div class="person-info-agileits-w3layouts">
-				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am technology enthusiast. I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon EC2, EB CLI, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc</p>
+				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am technology enthusiast.<br>I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon EC2, EB CLI, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc</p><br>
 				<p>I am involved in most parts of the software life cycle i.e architecture designing, schema designing, and coding.</p>
-				<p>I have always provided the product in-time with best quality and still hunting to learn more and to improve my skills.</p>
 				<ul>
 					<li><span>Name</span>: Touqeer Ahmad</li>
 					<li><span>Age</span>: 24 Years</li>
-					<li><span>Experience</span>: +2 Years</li>
+					<li><span>Experience</span>: +1 Years</li>
 					<li><span>Email</span>: <a href="mailto:tqr093@gmail.com">tqr093@gmail.com</a></li>
 					<li><span>Phone</span>: +92 343 4535019</li>
 					<li><span>Address</span>: Lahore, Pakistan</li>
