--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -591,9 +591,6 @@ h3.subheading-agileits-w3layouts {
 	font-family: 'Josefin Sans', sans-serif;
 }
 
-.pos-w3ls {
-	margin-top: 2em;
-}
 
 .pos-w3ls h4 {
 	font-size: 36px;
@@ -684,7 +681,7 @@ h3.subheading-agileits-w3layouts {
 
 .about-border-w3ls {
 	position: absolute;
-	padding: 24.95em 21em;
+	padding: 26.75em 21em;
 	border: 24px solid #000;
 }
 
@@ -693,7 +690,7 @@ h3.subheading-agileits-w3layouts {
 	background: var(--main-secondary-color-main);
 	position: absolute;
 	left: 3em;
-	top: 4.4em;
+	top: 3em;
 	box-shadow: -3px 7px 15px rgba(21, 21, 21, 0.38);
 }
 
@@ -1409,6 +1406,9 @@ h3.subheading-agileits-w3layouts {
 		width: 250px;
 		height: 250px;
 	}
+	.about-border-w3ls {
+		padding: 28.58em 17em;
+	}
 }
 
 @media(max-width:1280px) {
@@ -1460,11 +1460,8 @@ h3.subheading-agileits-w3layouts {
 	.banner-text-w3-agileits {
 		margin-top: 3em;
 	}
-	.about-border-w3ls {
-		padding: 24.95em 17em;
-	}
 	.person-info-agileits-w3layouts {
-		padding: 2.5em;
+		padding: 2.8em;
 	}
 	.work_box h5.title-w3 span {
 		left: -5%;
@@ -1487,9 +1484,6 @@ h3.subheading-agileits-w3layouts {
 	.pos-w3ls h4 {
 		font-size: 30px;
 		margin-top: 6px;
-	}
-	.pos-w3ls {
-		margin-top: 1em;
 	}
 }
 
@@ -1575,8 +1569,8 @@ h3.subheading-agileits-w3layouts {
 		padding-bottom: 49em;
 	}
 	.person-info-agileits-w3layouts {
-		left: 3.5em;
-		top: 4em;
+		left: 3em;
+		top: 3em;
 	}
 	.display-grid-1-w3lsagile {
 		width: 100%;
@@ -1693,7 +1687,7 @@ h3.subheading-agileits-w3layouts {
 		margin: 0em auto 1em;
 	}
 	.about-w3layouts {
-		padding-bottom: 48em;
+		padding-bottom: 47em;
 	}
 	.skills-w3layouts {
 		margin-top: 3em;
@@ -1773,8 +1767,8 @@ h3.subheading-agileits-w3layouts {
 		border: 15px solid #000;
 	}
 	.person-info-agileits-w3layouts {
-		left: 3em;
-		top: 3.3em;
+		left: 2.5em;
+		top: 2.5em;
 	}
 	h5.title-w3 span {
 		top: -65%;
@@ -1784,7 +1778,7 @@ h3.subheading-agileits-w3layouts {
 		width: 80px;
 	}
 	.about-w3layouts {
-		padding-bottom: 47em;
+		padding-bottom: 48em;
 	}
 	.banner-text-w3-agileits>.botton>a{
 		margin-top: 0.5em;
@@ -1828,6 +1822,9 @@ h3.subheading-agileits-w3layouts {
 	.about-top {
 		width: 100%;
 	}
+	.person-info-agileits-w3layouts {
+	    padding: 2em;
+	}
 }
 
 @media(max-width:640px) {
@@ -1865,14 +1862,14 @@ h3.subheading-agileits-w3layouts {
 		padding: 21em 15.5em;
 	}
 	.person-info-agileits-w3layouts {
-		top: 2.4em;
-		left: 2em;
+		top: 1.8em;
+		left: 1.8em;
 	}
 	.about-border-w3ls {
-		padding: 22em 14.5em;
+		padding: 24.3em 14.5em;
 	}
 	.about-w3layouts {
-		padding-bottom: 48.5em;
+		padding-bottom: 51em;
 	}
 }
 
@@ -1892,6 +1889,9 @@ h3.subheading-agileits-w3layouts {
 	.profile-pic {
 	    width: 180px;
 	    height: 180px;
+	}
+	.person-info-agileits-w3layouts {
+	    padding: 1.5em;
 	}
 }
 
@@ -1914,12 +1914,12 @@ h3.subheading-agileits-w3layouts {
 		padding-top: 1.5em;
 	}
 	.about-border-w3ls {
-		padding: 24.5em 12em;
+		padding: 26.5em 12em;
 	}
 	.pos-w3ls h4 {
 		font-size: 19px;
 		letter-spacing: 1px;
-		margin-top: 10px;
+		/*margin-top: 10px;*/
 	}
 	.edu-img-agileits,
 	.exp-img-agileits {
@@ -1984,10 +1984,10 @@ h3.subheading-agileits-w3layouts {
 		margin-top: 1em;
 	}
 	.person-info-agileits-w3layouts {
-		padding: 2em;
+		padding: 1.5em;
 	}
 	.about-border-w3ls {
-		padding: 24.5em 10.8em;
+		padding: 30em 10.8em;
 	}
 	.person-info-agileits-w3layouts ul li span {
 		width: 100%;
@@ -1996,10 +1996,7 @@ h3.subheading-agileits-w3layouts {
 		margin-top: 1em;
 	}
 	.about-w3layouts {
-		padding-bottom: 58.5em;
-	}
-	.about-border-w3ls {
-		padding: 27em 10.8em;
+		padding-bottom: 64em;
 	}
 	.w3-logo a span {
 	    letter-spacing: 7.5px;
@@ -2022,10 +2019,10 @@ h3.subheading-agileits-w3layouts {
 		margin: .5em 0 .5em;
 	}
 	.about-w3layouts {
-		padding-bottom: 62.5em;
+		padding-bottom: 66em;
 	}
 	.about-border-w3ls {
-		padding: 29em 10em;
+		padding: 31.5em 10em;
 	}
 	h5.title-w3 {
 		font-size: 1.7em;
@@ -2048,14 +2045,17 @@ h3.subheading-agileits-w3layouts {
 		background: url('<%= asset_path("arr.png") %>') no-repeat 0px 0px;
 		background-size: 32px;
 	}
+	.button-w3layouts a {
+	    padding: 8px 16px;
+	}
 }
 
 @media(max-width:384px) {
 	.about-border-w3ls {
-		padding: 30em 9em;
+		padding: 32em 9em;
 	}
 	.about-w3layouts {
-		padding-bottom: 64.5em;
+		padding-bottom: 69em;
 	}
 	.banner-text-w3-agileits h2{
 		font-size: 1.5em;
@@ -2068,12 +2068,12 @@ h3.subheading-agileits-w3layouts {
 	.banner-text-w3-agileits h2:after {
 	    width: 74px;
 	}
+	.person-info-agileits-w3layouts {
+	    padding: 1.2em;
+	}
 }
 
 @media(max-width:375px) {
-	.person-info-agileits-w3layouts {
-		padding: 1.8em;
-	}
 	.copyright-wthree {
 		padding: 1.5em 0.5em;
 	}
@@ -2083,6 +2083,9 @@ h3.subheading-agileits-w3layouts {
 	}
 	.botton a {
 		margin: 0;
+	}
+	.about-w3layouts {
+	    padding-bottom: 71.5em;
 	}
 }
 
@@ -2096,7 +2099,7 @@ h3.subheading-agileits-w3layouts {
 		padding: 2.5em 0;
 	}
 	.about-w3layouts {
-		padding-bottom: 68.5em;
+		padding-bottom: 78em;
 	}
 	.banner-text-w3-agileits p {
 		letter-spacing: 3.5px;
@@ -2110,7 +2113,7 @@ h3.subheading-agileits-w3layouts {
 		left: 1.5em;
 	}
 	.about-border-w3ls {
-		padding: 32.5em 7.5em;
+		padding: 38em 7.5em;
 		border: 8px solid #000;
 	}
 	.activity-desc h5 {
