gems list updated

--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -2048,6 +2048,10 @@ h3.subheading-agileits-w3layouts {
 	.button-w3layouts a {
 	    padding: 8px 16px;
 	}
+	.skills-w3lsleft>.col-xs-6{
+		padding: 0;
+    	font-size: 14px;
+    }
 }
 
 @media(max-width:384px) {
