--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -2051,6 +2051,7 @@ h3.subheading-agileits-w3layouts {
 	.skills-w3lsleft>.col-xs-6{
 		padding: 0;
     	font-size: 14px;
+    	margin-bottom: 20px;
     }
 }
 
