--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="Toueer Ahmad, ROR Developer, Software Engineer, Ruby on Rails, Web Developer, Website Maker, API Developer, Responsive Site Maker, MVC, Modal View Controller" />
+  <meta name="keywords" content="toueer ahmad, tqr, tqr093, university of central punjab, ror developer, software engineer, ruby on rails, web developer, website maker, api developer, responsive site maker, mvc, modal view controller" />
+  <meta name="description" content="touqeer ahmad full stack ruby on rails web developer" />
   <script type="application/x-javascript">
     addEventListener("load", function () {
       setTimeout(hideURLbar, 0);
