--- a/app/views/portfolios/_cover.html.erb
+++ b/app/views/portfolios/_cover.html.erb
@@ -15,12 +15,12 @@
 <div class="banner-text-w3-agileits">
 	<%= image_tag "ruby-on-rails.png", class:"ror-pic" %>
 	<div style="float: right">
-		<h5>Hi, I'm</h5>
-		<h2><span>T</span>ouqeer <span>A</span>hmad</h2>
+		<span>Hi, I'm</span>
+		<h1><span>T</span>ouqeer <span>A</span>hmad</h1>
 		<p><span>Full Stack ROR Developer</span></p>
 		<div class="botton">
 			<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 		</div>
 	</div>
 </div>
- <%= image_tag "profile.jpg", alt: "Cinque Terre", class:"profile-pic" %> 
+ <%= image_tag "profile.jpg", alt: "touqeer ahmad, tqr, profile-pic", class:"profile-pic" %> 
