--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <div class="copyright-wthree">
 	<div class="container">
-		<p>&copy; 2017 Portfolio . All Rights Reserved | <a target="_blank" href="https://www.linkedin.com/in/touqeer-ahmad/"> Touqeer Ahmad </a></p>
+		<p>&copy; 2017 Portfolio . All Rights Reserved | <a target="_blank" href="https://www.linkedin.com/in/touqeer-ahmad/"> Touqeer Ahmad</a> <a href="https://plus.google.com/u/0/+TouqeerAhmad-tqr" alt="google plus touqeer-ahmad-tqr" target="_blank" class="fa fa-google-plus" style="text-decoration: none;"></a></p>
 	</div>
 </div>
 <!-- //Footer -->
