--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -16,8 +16,9 @@
 			<div class="botttom-nav-agileits">
 				<div class="w3l-social">
 					<ul>
-						<li><a href="https://www.linkedin.com/in/touqeer-ahmad/" target="_blank" class="fa fa-linkedin"></a></li>
-						<li><a href="https://www.facebook.com/tqr093" target="_blank" class="fa fa-facebook"></a></li>
+						<li><a href="https://www.linkedin.com/in/touqeer-ahmad/" alt="linkedin touqeer ahmad tqr" target="_blank" class="fa fa-linkedin"></a></li>
+						<li><a href="https://www.facebook.com/tqr093" alt="facebook touqeer ahmad tqr" target="_blank" class="fa fa-facebook"></a></li>
+						<li><a href="https://plus.google.com/u/0/+TouqeerAhmad-tqr" alt="google plus touqeer-ahmad-tqr" target="_blank" class="fa fa-google-plus"></a></li>
 					</ul>
 				</div>
 			</div>
