--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -1268,6 +1268,7 @@ h3.subheading-agileits-w3layouts {
 	text-align: center;
 }
 
+.w3l-social ul li a.fa.fa-github,
 .w3l-social ul li a.fa.fa-facebook,
 .w3l-social ul li a.fa.fa-linkedin,
 .w3l-social ul li a.fa.fa-twitter,
@@ -1285,6 +1286,9 @@ h3.subheading-agileits-w3layouts {
 	-o-transition: 0.5s all;
 	-ms-transition: 0.5s all;
 }
+.w3l-social ul li a.fa.fa-github{
+	color: #ffffff;
+}
 .w3l-social ul li a.fa.fa-facebook{
 	color: #3A5795;
 }
@@ -1293,9 +1297,14 @@ h3.subheading-agileits-w3layouts {
 }
 .w3l-social ul li a.fa.fa-google-plus{
 	color: #A52728;
+	width: 70px;
 }
 .w3l-social ul li a.fa.fa-linkedin{
 	color: #026BA5;
+}
+
+.w3l-social ul li a.fa.fa-github:hover {
+	color: #9999;
 }
 
 .w3l-social ul li a.fa.fa-facebook:hover {
