mail config updated

--- a/app/views/user_mailer/send_email.html.erb
+++ b/app/views/user_mailer/send_email.html.erb
@@ -6,8 +6,8 @@
   <body>
     <h1>Contacted from Portfolio</h1>
     <h3>Name: <%= @name %></h3>
-    <h3>Email: <%= @email %></h3>
+    <h3>Email: <%= @email_address %></h3>
     <br>
-    <pre><%= @messsage %></pre>
+    <pre><%= @message %></pre>
   </body>
 </html>
